# Object-Oriented-Programming

./: README.md  compileQT.txt
Assignment 1/: CMakeLists.txt  main.c
Assignment 10/: CMakeLists.txt  Toolery.qss  basket_repo.txt  csv_basket_repo.csv  main.cpp  populate_repo.txt  settings.properties  sql_store_repo.db  store_repo.txt  test_csv_basket_repo.csv  test_html_basket_repo.html  test_sql_store_repo.db  test_store_repo.txt
Assignment 10/actions/: abstract_action.h  action_add.cpp  action_add.h  action_remove.cpp  action_remove.h  action_update.cpp  action_update.h
Assignment 10/business/: service.cpp  service.h
Assignment 10/dynamic_array/: dynamic_array.cpp  dynamic_array.h  dynamic_vector.h
Assignment 10/persistency/: abstract_repository.h  basket_csv_repo.cpp  basket_file_repo.cpp  basket_file_repo.h  file_repo.cpp  file_repo.h  in_memory_repo.cpp  in_memory_repo.h  sql_repo.cpp  sql_repo.h
Assignment 10/presentation/: gui.cpp  gui.h  ui.cpp  ui.h
Assignment 10/qt_models_and_views/: coats_table_model.cpp  coats_table_model.h  coats_widget.cpp  coats_widget.h  picture_delegate.cpp  picture_delegate.h
Assignment 10/settings_handler/: settings_handler.h
Assignment 10/tests/: all_tests.h  repository_tests.cpp  service_tests.cpp  service_tests.h  validation_tests.cpp
Assignment 10/utils/: size_filter.h
Assignment 2&3/: CMakeLists.txt  a  compile and run valgrind.txt  main.c
Assignment 2&3/business/: service.c  service.h
Assignment 2&3/domain/: date.c  date.h  product.c  product.h
Assignment 2&3/dynamic_array/: dynamic_array.c  dynamic_array.h
Assignment 2&3/persistency/: repository.c  repository.h
Assignment 2&3/presentation/: ui.c  ui.h
Assignment 2&3/tests/: run_all_tests.c  run_all_tests.h  test_domain.c  test_domain.h  test_dynamic_array.c  test_dynamic_array.h  test_repository.c  test_repository.h  test_service.c  test_service.h  test_validators.c  test_validators.h
Assignment 2&3/undo_redo_inv_ops/: inv_ops_undo_redo.c  inv_ops_undo_redo.h
Assignment 2&3/utils/: comparators_and_filters.c  comparators_and_filters.h
Assignment 2&3/validation/: category_validator.c  category_validator.h  date_validator.c  date_validator.h  product_validator.c  product_validator.h
Assignment 4&5/: CMakeLists.txt  a  main.cpp
Assignment 4&5/business/: service.cpp  service.h
Assignment 4&5/domain/: trench_coat.cpp  trench_coat.h
Assignment 4&5/dynamic_array/: dynamic_array.cpp  dynamic_array.h
Assignment 4&5/errors/: exceptions.h
Assignment 4&5/persistency/: file_repository.cpp  file_repository.h  repeated_instances_repository.cpp  repeated_instances_repository.h  repository.cpp  repository.h
Assignment 4&5/presentation/: ui.cpp  ui.h
Assignment 4&5/tests/: all_tests.cpp  repository_tests.cpp  repository_tests.h  service_tests.cpp  service_tests.h  templated_dynamic_vector_tests.cpp
Assignment 4&5/validation/: trench_coat_validator.h
Assignment 6&7/: CMakeLists.txt  html_basket_repo.html  main.cpp  sql_store_repo.db  store_repo.txt  test_csv_basket_repo.csv  test_sql_store_repo.db
Assignment 6&7/business/: service.cpp  service.h
Assignment 6&7/domain/: trench_coat.cpp
Assignment 6&7/dynamic_array/: dynamic_array.cpp  dynamic_array.h  dynamic_vector.h
Assignment 6&7/errors/: exceptions.h
Assignment 6&7/persistency/: abstract_repository.h  basket_file_repo.cpp  basket_file_repo.h  file_repo.h  in_memory_repo.cpp  in_memory_repo.h  sql_repo.cpp  sql_repo.h
Assignment 6&7/presentation/: ui.cpp
Assignment 6&7/tests/: domain_tests.cpp  domain_tests.h  dynamic_array_tests.cpp  dynamic_array_tests.h  exception_tests.h  service_tests.cpp  service_tests.h  templated_dynamic_vector_tests.cpp  templated_dynamic_vector_tests.h  validation_tests.h
Assignment 6&7/validation/: trench_coat_validator.cpp
Assignment 8&9/: CMakeLists.txt  html_basket_repo.html  main.cpp  sql_store_repo.db  test_html_basket_repo.html
Assignment 8&9/business/: service.cpp  service.h
Assignment 8&9/domain/: trench_coat.h
Assignment 8&9/errors/: exceptions.h
Assignment 8&9/persistency/: abstract_repository.h  basket_csv_repo.h  basket_file_repo.h  basket_html_repo.cpp  basket_html_repo.h  file_repo.cpp  file_repo.h  in_memory_repo.cpp  in_memory_repo.h  sql_repo.cpp  sql_repo.h
Assignment 8&9/presentation/: gui.cpp  gui.h
Assignment 8&9/settings_handler/: settings_handler.cpp
Assignment 8&9/tests/: exception_tests.cpp  repository_tests.h
Assignment 8&9/utils/: abstract_filter.h
Assignment 8&9/validation/: trench_coat_validator.cpp
Final Exam/: CMakeLists.txt  buildings.txt  main.cpp
Final Exam/business/: service.cpp  service.h
Final Exam/domain/: building.cpp  building.h  ethnologist.cpp  ethnologist.h
Final Exam/persistency/: buildings_repo.cpp  buildings_repo.h  ethnologists_repo.cpp  ethnologists_repo.h
Final Exam/presentation/: all_windows.cpp  all_windows.h  buildings_model.cpp  buildings_model.h  ethnologist_window.cpp  ethnologist_window.h  park_model.cpp  park_model.h  park_window.cpp  park_window.h
Lab Test Week 10/: CMakeLists.txt  main.cpp
Lab Test Week 10/business/: service.cpp  service.h
Lab Test Week 10/domain/: bmi.cpp  bp.h  measurement.h
Lab Test Week 10/dynamic_vector/: dynamic_vector.cpp
Lab Test Week 10/persistency/: person.cpp  person.h  repository.cpp
Lab Test Week 10/presentation/: ui.cpp
Lab Test Week 10/tests/: repository_tests.h  service_tests.cpp  service_tests.h
Lab Test Week 13/: CMakeLists.txt  main.cpp
Lab Test Week 13/business/: service.cpp  service.h
Lab Test Week 13/domain/: bmi.h  bp.cpp  measurement.cpp  time_interval.cpp  time_interval.h
Lab Test Week 13/interface/: gui.cpp  gui.h
Lab Test Week 13/persistency/: repository.cpp  repository.h
Lab Test Week 13/presentation/: ui.h
Lab Test Week 7/business/: service.cpp
Lab Test Week 7/domain/: gene.cpp  gene.h
Lab Test Week 7/dynamic_vector/: dynamic_vector.h
Lab Test Week 7/persistency/: repository.h
Lab Test Week 7/presentation/: ui.cpp  ui.h
Lab Test Week 7/tests/: repository_tests.cpp  run_all_tests.cpp  (+1 more)
